Add mist endpoint

--- a/src/templates/logvac/config.json.erb
+++ b/src/templates/logvac/config.json.erb
@@ -1,7 +1,7 @@
 {
   "listen-http": "0.0.0.0:6361",
   "listen-udp": "0.0.0.0:514",
-  "pub-address": "mist://<%= config[:mist] %>",
+  "pub-address": "mist://<%= config[:mist] %>:1445",
   "db-address": "boltdb:///var/db/logvac/db.bolt",
   "auth-address": "boltdb:///var/db/logvac/log-auth.bolt",
   "log-keep": "{\"app\":\"2w\"}",
