Force narc to connect to logvac on localhost

--- a/src/templates/narc.conf.erb
+++ b/src/templates/narc.conf.erb
@@ -21,7 +21,7 @@ syslog-facility local0
 ##########
 
 # remote syslog
-remote-host <%= logvac %>
+remote-host 127.0.0.1
 remote-port 514
 remote-proto udp
 
