--- a/src/templates/logvac/config.json.erb
+++ b/src/templates/logvac/config.json.erb
@@ -2,6 +2,7 @@
   "listen-http": "0.0.0.0:6361",
   "listen-udp": "0.0.0.0:514",
   "pub-address": "mist://<%= mist %>:1445",
+  "pub-auth": "<%= mist_token %>",
   "db-address": "boltdb:///var/db/logvac/db.bolt",
   "auth-address": "boltdb:///var/db/logvac/log-auth.bolt",
   "log-keep": "{\"app\":\"2w\"}",
