Disable tcp collector

--- a/src/templates/logvac/config.json.erb
+++ b/src/templates/logvac/config.json.erb
@@ -1,6 +1,7 @@
 {
   "listen-http": "0.0.0.0:6361",
   "listen-udp": "0.0.0.0:514",
+  "listen-tcp": "",
   "pub-address": "mist://<%= mist %>:1445",
   "pub-auth": "<%= mist_token %>",
   "db-address": "boltdb:///var/db/logvac/db.bolt",
