Cleanup logs based on number
This will keep the size of the database more consistent accross apps
Resolves #8

--- a/src/templates/logvac/config.json.erb
+++ b/src/templates/logvac/config.json.erb
@@ -6,7 +6,7 @@
   "pub-auth": "<%= mist_token %>",
   "db-address": "boltdb:///var/db/logvac/db.bolt",
   "auth-address": "boltdb:///var/db/logvac/log-auth.bolt",
-  "log-keep": "{\"app\":\"2w\"}",
+  "log-keep": "{\"app\":500000}",
   "log-type": "app",
   "log-level": "info",
   "token": "<%= config[:token] %>",
